--- a/nginx.conf
+++ b/nginx.conf
@@ -14,5 +14,10 @@ http {
       proxy_pass http://server:8000;
     }
 
+    location /nginx_status {
+      stub_status on;
+      allow 127.0.0.1;
+      deny all;
+    }
   }
 }
